Update README.md
Added Apache Directory Studio and Visual Studio Code notes.